last modified component added in footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,10 +43,9 @@ h1 {letter-spacing: 6px}
 
   
   <footer>
-   <ul>
-   <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-   <li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-   </ul>
+	<script language="Javascript">
+		document.write("This page was last modified on: " + document.lastModified +"");
+	</script>
   </footer>
   </body>
 
