--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     
     <link rel="stylesheet" type="text/css" href="/css/main.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://raw.githubusercontent.com/awaisrauf/GE2018/master/imgs/favicon.png">
   
   </head>
 
