com and abbt page addeed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,12 +29,14 @@ h1 {letter-spacing: 6px}
   
   <div class="w3-padding-32">
     <div class="w3-bar w3-border">
-	<p>To know specific prediction, click following;</p>
       <a href="https://awaisrauf.github.io/GE2018" class="w3-bar-item w3-button">Pakistan</a>
       <a href="https://awaisrauf.github.io/GE2018/pages/punjab" class="w3-bar-item w3-button">Punjab</a>
       <a href="https://awaisrauf.github.io/GE2018/pages/sindh" class="w3-bar-item w3-button">Sindh</a>
       <a href="https://awaisrauf.github.io/GE2018/pages/kpk" class="w3-bar-item w3-button">KPK</a>
 	  <a href="https://awaisrauf.github.io/GE2018/pages/balochistan" class="w3-bar-item w3-button">Baluchistan</a>
+	  <a href="https://awaisrauf.github.io/GE2018/comparison" class="w3-bar-item w3-button">Comparison</a>
+	  <a href="https://awaisrauf.github.io/GE2018/about" class="w3-bar-item w3-button">About</a>
+	  
     </div>
   </div>
 </header>
