--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,14 @@
 
 
 <style>
-
+.w3-btn,.w3-button{border:none;display:inline-block;padding:8px 16px;vertical-align:middle;overflow:hidden;text-decoration:none;color:inherit;background-color:inherit;text-align:center;cursor:pointer;white-space:nowrap}
+.w3-bar .w3-bar-item{padding:8px 16px;float:left;width:auto;border:none;display:block;outline:0}
+.w3-content{max-width:980px;margin:auto}.w3-rest{overflow:hidden}
+.w3-panel:after,.w3-panel:before,.w3-row:after,.w3-row:before,.w3-row-padding:after,.w3-row-padding:before,
+.w3-cell-row:before,.w3-cell-row:after,.w3-clear:after,.w3-clear:before,.w3-bar:before,.w3-bar:after{content:"";display:table;clear:both}
+w3-center .w3-bar{display:inline-block;width:auto}
+.w3-opacity,.w3-hover-opacity:hover{opacity:0.60}
+.w3-xlarge{font-size:24px!important}
 </style>
 <!-- !PAGE CONTENT! -->
 <div class="w3-content" style="max-width:1500px">
